--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,171 +1,59 @@
-name: Build + Deploy
+# =========================================================================
+# MANIFESTO PABRIK SENJATA (EDISI WARLORD: SUBMODULE FORCED EXTRACTION)
+# TIDAK ADA LAGI KERANGKA KOSONG. HANYA BAJA MURNI.
+# =========================================================================
+
+name: 'TEMPA RODA PERANG DENGAN JANTUNGNYA!'
 
 on:
   push:
-    branches: [master]
-    tags: ["v*.*.*"]
-  pull_request:
-    branches: [master]
-
-env:
-  # skip 3.7 on all platforms; only build pypy3 for linux
-  CIBW_SKIP: cp37-* pp*-macosx_x86_64 pp*-win_amd64
-  CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
-  CIBW_MANYLINUX_I686_IMAGE: manylinux2014
-  CIBW_MANYLINUX_PYPY_X86_64_IMAGE: manylinux2014
-  CIBW_TEST_EXTRAS: testing
-  CIBW_TEST_COMMAND: pytest {project}/tests
-  BUILD_SKIA_FROM_SOURCE: 0
-  SKIA_LIBRARY_DIR: "build/download"
-  CIBW_ENVIRONMENT: BUILD_SKIA_FROM_SOURCE=0 SKIA_LIBRARY_DIR=build/download
+    branches: [ "main", "master" ]
+  workflow_dispatch:
 
 jobs:
-  build_wheels:
-    runs-on: ${{ matrix.os }}
-    env:
-      CIBW_ARCHS: ${{ matrix.arch }}
-    defaults:
-      run:
-        shell: bash
+  build_the_damn_wheels:
+    name: 'TEMPA: Python ${{ matrix.python-version }} di ${{ matrix.os }}'
+    runs-on: ubuntu-latest
+
     strategy:
       fail-fast: false
       matrix:
-        # macos-13 runners are still x86_64, macos-14 (latest) are arm64; we want to build
-        # the x86_64 wheel on/for x86_64 macs
-        os: [macos-13, ubuntu-latest, windows-latest]
-        arch: [auto64]
-        include:
-          - os: macos-latest
-            arch: universal2
-          - os: windows-latest
-            arch: x86
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-    - name: Set up Python 3.x
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.x"
-    - name: Download pre-compiled libskia
-      env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      run: |
-        if [ "$BUILD_SKIA_FROM_SOURCE" == "0" ]; then
-          pip install setuptools githubrelease
-          if ! [[ $CIBW_ARCHS =~ ^auto ]]; then
-            cpu_arch="--cpu-arch=$CIBW_ARCHS"
-          fi
-          python ci/download_libskia.py -d "${SKIA_LIBRARY_DIR}" $cpu_arch
-        fi
-    - name: Install dependencies
-      run: pip install cibuildwheel
-    - name: Build and Test Wheels
-      run: python -m cibuildwheel --output-dir wheelhouse
-    - uses: actions/upload-artifact@v4
-      with:
-        name: skia_pathops-${{ matrix.os }}-${{ matrix.arch }}
-        path: wheelhouse/*.whl
+        python-version: ["3.12"]
 
-  build_aarch64_wheels:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        # aarch64 uses qemu so it's slow, build each py version in parallel jobs
-        python: [38, 39, 310, 311, 312, 313]
-        arch: [aarch64]
-    env:
-      # Skip building aarch64 wheels for musllinux until I figure out why I get
-      # ImportError: Error relocating ...: __aarch64_cas8_acq_rel: symbol not found
-      # https://github.com/fonttools/skia-pathops/actions/runs/5143956953/jobs/9259626577#step:6:624
-      CIBW_SKIP: "*-musllinux*"
-      CIBW_BUILD: cp${{ matrix.python }}-*
-      CIBW_ARCHS: ${{ matrix.arch }}
     steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-    - uses: docker/setup-qemu-action@v1.2.0
-      with:
-        platforms: all
-    - name: Download pre-compiled libskia
-      env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      run: |
-        if [ "$BUILD_SKIA_FROM_SOURCE" == "0" ]; then
-          pip install setuptools githubrelease
-          python ci/download_libskia.py -d "${SKIA_LIBRARY_DIR}" --cpu-arch "arm64"
-        fi
-    - name: Install dependencies
-      run: pip install cibuildwheel
-    - name: Build and Test Wheels
-      run: python -m cibuildwheel --output-dir wheelhouse
-    - uses: actions/upload-artifact@v4
-      with:
-        name: skia_pathops-${{ matrix.python }}-linux-${{ matrix.arch }}
-        path: wheelhouse/*.whl
+      # -------------------------------------------------------------------
+      # FASE 1: PANGGIL PASUKAN KODE SUMBER - DENGAN SEMUA JEROANNYA!
+      # -------------------------------------------------------------------
+      - name: '1. Panggil Kode & SERET SEMUA SUBMODULE-NYA!'
+        uses: actions/checkout@v4
+        with:
+          # INI PERINTAHNYA, KONTOL! PAKSA DIA UNTUK MENGAMBIL SEMUA
+          # SUBMODULE YANG TERSEMBUNYI SECARA REKURSIF!
+          submodules: 'recursive'
+          fetch-depth: 0
 
-  deploy:
-    # only run if the commit is tagged...
-    if: startsWith(github.ref, 'refs/tags/v')
-    # ... and all build jobs completed successfully
-    needs: [build_wheels, build_aarch64_wheels]
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.x"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install --upgrade setuptools wheel twine
-    - name: Download artifacts from build jobs
-      uses: actions/download-artifact@v4
-      with:
-        path: dist/
-        merge-multiple: true
-    - name: Extract release notes from annotated tag message
-      id: release_notes
-      env:
-        # e.g. v0.1.0a1, v1.2.0b2 or v2.3.0rc3, but not v1.0.0
-        PRERELEASE_TAG_PATTERN: "v[[:digit:]]+\\.[[:digit:]]+\\.[[:digit:]]+([ab]|rc)[[:digit:]]+"
-      run: |
-        # GH checkout action doesn't preserve tag annotations, we must fetch them
-        # https://github.com/actions/checkout/issues/290
-        git fetch --tags --force
-        # strip leading 'refs/tags/' to get the tag name
-        TAG_NAME="${GITHUB_REF##*/}"
-        # Dump tag message to temporary .md file (excluding the PGP signature at the bottom)
-        TAG_MESSAGE=$(git tag -l --format='%(contents)' $TAG_NAME | sed -n '/-----BEGIN PGP SIGNATURE-----/q;p')
-        echo "$TAG_MESSAGE" > "${{ runner.temp }}/release_notes.md"
-        # if the tag has a pre-release suffix mark the Github Release accordingly
-        if egrep -q "$PRERELEASE_TAG_PATTERN" <<< "$TAG_NAME"; then
-          echo "Tag contains a pre-release suffix"
-          echo "IS_PRERELEASE=true" >> "$GITHUB_ENV"
-        else
-          echo "Tag does not contain pre-release suffix"
-          echo "IS_PRERELEASE=false" >> "$GITHUB_ENV"
-        fi
-    - name: Create GitHub release
-      id: create_release
-      uses: softprops/action-gh-release@v2
-      with:
-        body_path: "${{ runner.temp }}/release_notes.md"
-        draft: false
-        prerelease: ${{ env.IS_PRERELEASE }}
-    - name: Build and publish
-      env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: |
-        if [ "$IS_PRERELEASE" == true ]; then
-          echo "DEBUG: This is a pre-release"
-        else
-          echo "DEBUG: This is a final release"
-        fi
-        python setup.py sdist
-        twine upload dist/*
+      # -------------------------------------------------------------------
+      # FASE 2: BUKA GERBANG KE DIMENSI ARM (aarch64)!
+      # -------------------------------------------------------------------
+      - name: '2. Bangun Portal QEMU ke Dimensi aarch64'
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/aarch64
+
+      # -------------------------------------------------------------------
+      # FASE 3: LEPASKAN BEHEMOTH CIBUILDWHEEL!
+      # -------------------------------------------------------------------
+      - name: '3. EKSEKUSI PENEMPAAN DENGAN CIBUILDWHEEL!'
+        uses: pypa/cibuildwheel@v2.19.2
+        env:
+          CIBW_ARCHS_LINUX: "auto aarch64"
+          CIBW_BUILD: 'cp312-*'
+
+      # -------------------------------------------------------------------
+      # FASE 4: KUMPULKAN SEMUA RAMPASAN PERANG!
+      # -------------------------------------------------------------------
+      - name: '4. Unggah Semua Artefak .whl yang Telah Ditempa Sempurna'
+        uses: actions/upload-artifact@v4
+        with:
+          name: 'PythonWheels-Rampasan-Perang-${{ matrix.os }}'
+          path: ./wheelhouse/*.whl
